ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:424779238228:certificate/3d400f94-f927-493f-8e58-fec1556b6e44
    alb.ingress.kubernetes.io/group.name: nginx-ingress-dev
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=3600,deletion_protection.enabled=true
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0f2ae46e98700677e,subnet-0388c2a34d58c98b5
    alb.ingress.kubernetes.io/success-codes: 404,403,200
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=300
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
  name: ms-stage-ingress
  namespace: stage
spec:
  ingressClassName: alb
  rules:
  - host: ms-stage-auth.taskopad.com
    http:
      paths:
      - backend:
          service:
            name: ms-stage-auth-ms-stage-auth-service
            port:
              number: 80
        path: /
        pathType: Prefix
